# sap-bp-data-quality-toolkit

./: README.md  config.yaml  pyproject.toml  requirements.txt
src/sap_bp_dq/: __main__.py  data_generator.py  dedup.py  pipeline.py  report.py  utils.py  validators.py
tests/: test_dedup.py  test_validators.py
